# CI

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  pyproject.toml
.github/: dependabot.yml
.github/workflow/: ci.yaml
.github/workflows/: build-binaries.yaml  ci.yml  deploy.txt  python-app.yml  release.yml
package/: main.py
tests/: test_main.py
