[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "CI"
version = "0.1.0"
description = "Testing CI"
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    # Add your runtime dependencies here
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 88
select = ["E", "F", "B", "I"]  # errors, pyflakes, bugbear, isort
target-version = "py311"

[tool.mypy]
check_untyped_defs = true
strict = true
ignore_missing_imports = true
