[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "CI"
version = "0.3.2"
description = "Testing CI"
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.8"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.3.2"
tag_format = "v$version"
version_files = [
  "pyproject.toml",
  "package/__init__.py"
]

dependencies = [
    # Add your runtime dependencies here
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "commitizen",
    "build",
    "twine"
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 88
select = ["E", "F", "B", "I"]  # errors, pyflakes, bugbear, isort
target-version = "py311"

[tool.mypy]
strict = true
