[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CI"
version = "0.4.0"
description = "Testing CI"
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.8"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.4.0"
tag_format = "v$version"
version_files = [
  "pyproject.toml",
  "package/__init__.py"
]

dependencies = [
    "requests==2.20.0"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "commitizen",
    "build",
    "twine"
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 88
select = ["E", "F", "B", "I"]  # errors, pyflakes, bugbear, isort
target-version = "py311"

[tool.mypy]
strict = true
